--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
-    "svelte-routing": "^2.13.0"
+    "svelte-routing": "^2.13.0",
+    "svelte-spa-router": "^4.0.1"
   }
 }
